Description JSON added